# agntz

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOY.md  Dockerfile  Dockerfile.app  Dockerfile.site  Dockerfile.worker  LICENSE  PUBLISH.md  PYTHON_PUBLISH.md  README.md  biome.json  docker-compose.yml  lefthook.yml  package.json  playground-plan.md  pnpm-lock.yaml  production-audit.html  railway.json  security-audit.html
python/: .gitignore  CHANGELOG.md  README.md  pyproject.toml
python/src/agntz/: __init__.py  agent_ref.py  context.py  evals.py  memrez.py  memrez_llm_reasoner.py  memrez_postgres.py  memrez_provider.py  memrez_reasoner.py  memrez_sqlite.py  server.py
python/src/agntz/cli/: __init__.py
python/src/agntz/client/: __init__.py  _sse.py  client.py  errors.py  events.py  models.py
python/src/agntz/core/: __init__.py  http_tool.py  ids.py  litellm_provider.py  mcp_tool.py  model_provider.py  resources.py  tools.py
python/src/agntz/manifest/: __init__.py  conditions.py  executor.py  parser.py  state.py  template.py  types.py  validate.py
python/src/agntz/sdk/: __init__.py  (+1 more)
python/tests/: test_context_memrez.py  test_evals.py  test_memrez_postgres.py  test_memrez_reasoner.py  test_memrez_resource_provider.py  test_memrez_sqlite.py  test_postgres_store.py  test_postgres_store_unit.py  test_server.py
python/tests/cli/: test_cli.py
python/tests/client/: test_hosted_client.py
python/tests/contracts/: test_memrez_contracts.py  test_phase0_contracts.py
python/tests/manifest/: test_manifest_contract.py
python/tests/sdk/: test_local_sdk.py
(+159 files in other folders)
